# dbt-practice

./: README.md  docker-compose.yml  pyproject.toml
postgres_dbt_practice/: .user.yml  dbt_project.yml  profiles.yml
