[tool.poetry]
name = "dbt-practice"
version = "0.1.0"
description = ""
authors = ["PraneethaMarthi <praneethamarthi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dbt-postgres = "^1.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
